--- a/APISistemaVenta/SistemaVenta.API/appsettings.json
+++ b/APISistemaVenta/SistemaVenta.API/appsettings.json
@@ -6,4 +6,6 @@
     }
   },
   "AllowedHosts": "*"
-}
+  "ConnectionStrings": {
+    "cadenaSQL": " Server=(local); DataBase=dbventa; Trusted_Connection=True; TrustServerCertificate=True;"
+  }
